[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/themes/dark/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/Main.gd" type="Script" id=2]
[ext_resource path="res://src/UI/TopMenuContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/PatternsPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/BrushesPopup.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/Dialogs/ImageEffects/ImageEffects.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/Dialogs/SaveSpriteHTML5.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/UI/Timeline/FrameProperties.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/UI/Dialogs/SaveSprite.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/UI/Dialogs/OpenSprite.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/UI/Dialogs/SplashDialog.tscn" type="PackedScene" id=27]
[ext_resource path="res://src/UI/Dialogs/CreateNewImage.tscn" type="PackedScene" id=28]
[ext_resource path="res://src/Preferences/PreferencesDialog.tscn" type="PackedScene" id=32]
[ext_resource path="res://src/UI/Dialogs/AboutDialog.tscn" type="PackedScene" id=34]
[ext_resource path="res://src/UI/Dialogs/ExportDialog.tscn" type="PackedScene" id=39]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}

[node name="MenuAndUI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMenuContainer" parent="MenuAndUI" instance=ExtResource( 3 )]

[node name="UI" parent="MenuAndUI" instance=ExtResource( 4 )]
margin_top = 28.0
margin_bottom = 720.0

[node name="ToolButtons" parent="MenuAndUI/UI/ToolPanel/PanelContainer" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 34.0
margin_bottom = 286.0

[node name="ViewportAndRulers" parent="MenuAndUI/UI/CanvasAndTimeline" index="0"]
margin_bottom = 484.0

[node name="TabsContainer" parent="MenuAndUI/UI/CanvasAndTimeline/ViewportAndRulers" index="0"]
margin_bottom = 29.0

[node name="Tabs" parent="MenuAndUI/UI/CanvasAndTimeline/ViewportAndRulers/TabsContainer" index="0"]
margin_left = 2.0
margin_top = 2.0
margin_right = 900.0
margin_bottom = 27.0

[node name="HorizontalRuler" parent="MenuAndUI/UI/CanvasAndTimeline/ViewportAndRulers" index="1"]
margin_top = 29.0
margin_bottom = 52.0

[node name="HSplitContainer" parent="MenuAndUI/UI/CanvasAndTimeline/ViewportAndRulers" index="2"]
margin_top = 52.0
margin_bottom = 484.0

[node name="ViewportandVerticalRuler" parent="MenuAndUI/UI/CanvasAndTimeline/ViewportAndRulers/HSplitContainer" index="0"]
margin_right = 894.0
margin_bottom = 432.0

[node name="VerticalRuler" parent="MenuAndUI/UI/CanvasAndTimeline/ViewportAndRulers/HSplitContainer/ViewportandVerticalRuler" index="0"]
margin_bottom = 432.0

[node name="ViewportContainer" parent="MenuAndUI/UI/CanvasAndTimeline/ViewportAndRulers/HSplitContainer/ViewportandVerticalRuler" index="1"]
margin_right = 894.0
margin_bottom = 432.0

[node name="Viewport" parent="MenuAndUI/UI/CanvasAndTimeline/ViewportAndRulers/HSplitContainer/ViewportandVerticalRuler/ViewportContainer" index="0"]
size = Vector2( 878, 432 )

[node name="ViewportContainer2" parent="MenuAndUI/UI/CanvasAndTimeline/ViewportAndRulers/HSplitContainer" index="1"]
margin_bottom = 432.0

[node name="Viewport" parent="MenuAndUI/UI/CanvasAndTimeline/ViewportAndRulers/HSplitContainer/ViewportContainer2" index="0"]
size = Vector2( 0, 432 )

[node name="CanvasPreviewContainer" parent="MenuAndUI/UI/RightPanel/PreviewAndPalettes" index="0"]
margin_bottom = 154.0

[node name="ToolAndPaletteVSplit" parent="MenuAndUI/UI/RightPanel/PreviewAndPalettes" index="1"]
margin_top = 158.0

[node name="ColorAndToolOptions" parent="MenuAndUI/UI/RightPanel/PreviewAndPalettes/ToolAndPaletteVSplit" index="0"]
margin_bottom = 255.0

[node name="PalettePanelContainer" parent="MenuAndUI/UI/RightPanel/PreviewAndPalettes/ToolAndPaletteVSplit" index="1"]
margin_top = 263.0
margin_bottom = 518.0

[node name="Dialogs" type="Control" parent="."]
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageEffects" parent="Dialogs" instance=ExtResource( 7 )]

[node name="BrushesPopup" parent="Dialogs" instance=ExtResource( 6 )]

[node name="PatternsPopup" parent="Dialogs" instance=ExtResource( 5 )]

[node name="SplashDialog" parent="Dialogs" instance=ExtResource( 27 )]

[node name="CreateNewImage" parent="Dialogs" instance=ExtResource( 28 )]
margin_right = 375.0

[node name="OpenSprite" parent="Dialogs" instance=ExtResource( 12 )]
current_dir = "/home/variable/Documents/Godot/Godot projects/Pixelorama-Var-Transparentalize"
current_path = "/home/variable/Documents/Godot/Godot projects/Pixelorama-Var-Transparentalize/"

[node name="SaveSprite" parent="Dialogs" instance=ExtResource( 11 )]
margin_left = 108.0
margin_top = 40.0
margin_right = 623.0
margin_bottom = 388.0
current_dir = "/home/variable/Documents/Godot/Godot projects/Pixelorama-Var-Transparentalize"
current_path = "/home/variable/Documents/Godot/Godot projects/Pixelorama-Var-Transparentalize/untitled"

[node name="SaveSpriteHTML5" parent="Dialogs" instance=ExtResource( 8 )]

[node name="ExportDialog" parent="Dialogs" instance=ExtResource( 39 )]

[node name="PreferencesDialog" parent="Dialogs" instance=ExtResource( 32 )]
margin_right = 617.0

[node name="AboutDialog" parent="Dialogs" instance=ExtResource( 34 )]

[node name="UnsavedCanvasDialog" type="ConfirmationDialog" parent="Dialogs"]
margin_right = 467.0
margin_bottom = 70.0
window_title = "Unsaved Image"
dialog_text = "You have unsaved changes. If you proceed, the progress you have made will be lost."

[node name="QuitDialog" type="ConfirmationDialog" parent="Dialogs"]
margin_right = 243.0
margin_bottom = 70.0
resizable = true
dialog_text = "Are you sure you want to exit Pixelorama?"

[node name="QuitAndSaveDialog" type="ConfirmationDialog" parent="Dialogs"]
margin_right = 330.0
margin_bottom = 70.0
window_title = "Save before exiting?"
resizable = true
dialog_text = "You have unsaved progress. How do you wish to proceed?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="Dialogs"]
margin_right = 151.0
margin_bottom = 60.0
window_title = "Error"
dialog_text = "This is an error message!"

[node name="BackupConfirmation" type="ConfirmationDialog" parent="Dialogs"]
margin_right = 349.0
margin_bottom = 88.0
rect_min_size = Vector2( 250, 87.5 )
popup_exclusive = true
dialog_text = "Autosaved backup for %s was found.
Do you want to reload it?"

[node name="FrameProperties" parent="Dialogs" instance=ExtResource( 9 )]

[node name="LeftCursor" type="Sprite" parent="."]
visible = false

[node name="RightCursor" type="Sprite" parent="."]
visible = false

[node name="ModulateTween" type="Tween" parent="."]
[connection signal="popup_hide" from="Dialogs/SplashDialog" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/CreateNewImage" to="." method="_can_draw_true"]
[connection signal="file_selected" from="Dialogs/OpenSprite" to="." method="_on_OpenSprite_file_selected"]
[connection signal="popup_hide" from="Dialogs/OpenSprite" to="." method="_on_OpenSprite_popup_hide"]
[connection signal="file_selected" from="Dialogs/SaveSprite" to="." method="_on_SaveSprite_file_selected"]
[connection signal="popup_hide" from="Dialogs/SaveSprite" to="." method="_can_draw_true"]
[connection signal="confirmed" from="Dialogs/SaveSpriteHTML5" to="." method="_on_SaveSpriteHTML5_confirmed"]
[connection signal="popup_hide" from="Dialogs/SaveSpriteHTML5" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/ExportDialog" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/PreferencesDialog" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/AboutDialog" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/UnsavedCanvasDialog" to="." method="_can_draw_true"]
[connection signal="confirmed" from="Dialogs/QuitDialog" to="." method="_on_QuitDialog_confirmed"]
[connection signal="popup_hide" from="Dialogs/QuitDialog" to="." method="_can_draw_true"]
[connection signal="confirmed" from="Dialogs/QuitAndSaveDialog" to="." method="_on_QuitDialog_confirmed"]
[connection signal="custom_action" from="Dialogs/QuitAndSaveDialog" to="." method="_on_QuitAndSaveDialog_custom_action"]
[connection signal="popup_hide" from="Dialogs/QuitAndSaveDialog" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/ErrorDialog" to="." method="_can_draw_true"]
[connection signal="popup_hide" from="Dialogs/BackupConfirmation" to="." method="_can_draw_true"]

[editable path="MenuAndUI/UI"]
